# minotaur

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENCE.md
.github/: labels.yml
.github/workflows/: docker-compile-master.yml  docker-compile-tag.yml  docker-compile.yml  labelsync.yml  tests.yml
migrations/: 20200718191706_init.sql
src/: main.rs  permissions.rs  scopes.rs
src/database/: mod.rs  mongo_database.rs
src/database/models/: client.rs  mod.rs  refresh_token.rs  user.rs
src/routes/: index.rs
