[package]
name = "minotaur"
version = "0.1.0"
authors = ["redblueflame <contact@redblueflame.com>", "Charalampos Fanoulis <charalampos.fanoulis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
dotenv = "0.15.0"
actix-rt = "1.0"
anyhow = "1.0.31"
serde_json = "1.0.56"
log = "0.4.8"
env_logger = "0.7.1"
mongodb = "1.0.0"
bson = "1.0.0"
serde = "1.0.114"
strum = "0.18.0"
strum_macros = "0.18.0"
rand = "0.7.3"