[package]
name = "minotaur"
version = "0.1.0"
authors = ["redblueflame <contact@redblueflame.com>", "Charalampos Fanoulis <charalampos.fanoulis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "minotaur"
path = "src/main.rs"

[dependencies]
actix = "0.9"
actix-web = "2.0.0"
dotenv = "0.15.0"
actix-rt = "1.0"
anyhow = "1.0.31"
serde_json = "1.0.59"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.114"
strum = "0.18.0"
strum_macros = "0.19.1"
rand = "0.7.3"
bitflags = "1.2.1"

[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx/"
branch = "master"
default-features = false
features = ["runtime-actix", "postgres", "chrono", "offline", "macros"]